---
= Novedades del centro de cargas de trabajo BlueXP  para GenAI
:allow-uri-read: 
:icons: font
:imagesdir: ./media/


[role="lead"]
Descubra las novedades de la funcionalidad para cargas de trabajo de IA generativas de la fábrica de cargas de trabajo.



== 02 de febrero de 2025



=== Filtrado de tipo de archivo para orígenes de datos

GenAI ahora admite la selección de tipos de archivo específicos para incluir en el análisis de origen de datos al agregar un origen de datos.

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["Agregue orígenes de datos a la base de conocimientos"]



=== Filtrado de fecha de modificación de archivo para orígenes de datos

GenAI ahora admite el filtrado de archivos para incluirlos en el análisis de origen de datos por fecha de modificación al agregar un origen de datos. Puede elegir un rango de fechas de modificación para los archivos incluidos.

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["Agregue orígenes de datos a la base de conocimientos"]



=== Soporte para archivos de imagen y soporte mejorado para archivos PDF

GenAI ahora admite el escaneo de archivos de imagen e imágenes dentro de archivos PDF (también conocido como soporte de archivos multimodal). Si elige archivos de imagen, el texto de las imágenes se escanea en el origen de datos y se utiliza como datos. Esta función incluye imágenes en documentos PDF; si incluye tipos de archivos PDF, las imágenes de cada PDF se escanean en busca de texto y ese texto se incluye en la información de la fuente de datos.

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["Agregue orígenes de datos a la base de conocimientos"]



=== Soporte híbrido de búsqueda y reselección
