@@ -342,14 +342,12 @@
   <block id="e9d7e3888c0ecac6d332909618bf2a62" category="list-text">Modelo de incrustación</block>
   <block id="52e64b029bc109efaa2d9ddf8bf95697" category="list-text">Debe activar el modelo de incrustación que planea utilizar antes de crear la base de conocimientos. Se admiten los siguientes modelos de inclusión:</block>
   <block id="cffe100a2fafd4ed6df5c517d3a0c436" category="list-text">Modelo de chat</block>
-  <block id="f4b120821069537b900189401cff6123" category="list-text">Debe activar el modelo de chat básico que planea utilizar antes de crear su base de conocimientos. Se admiten los siguientes modelos de chat de Claude:</block>
   <block id="91862a732427fcc9b0f3f7c7e8fd3ef1" category="list-text">Claude 3,5 Soneto</block>
   <block id="1ae4bf76ece2339f94382079fec8ea1b" category="list-text">Claude 3 Opus</block>
   <block id="5cb902fc92ae2100fc949c459b29f2e0" category="list-text">Claude 3 Haiku</block>
   <block id="dfd281025f82519d079a3bf3bfbabad2" category="list-text">Claude 3 Soneto</block>
   <block id="48a6d42b28f10b9387da7c0c33136030" category="list-text">Claude 2,1</block>
   <block id="5e1e83b3913f32ce101decea051b2e89" category="list-text">Claude 2,0</block>
-  <block id="a9c39caddabc1e9e831e8874624eeb0b" category="paragraph">Dado que el soporte de modelos varía según la región de AWS, consulte<block ref="eddadb17a88dd68548e655a82b495d2f" category="inline-link-rx"></block> para verificar qué modelos puede utilizar en las regiones en las que planea implementar su base de conocimientos.</block>
   <block id="c16810aa96ec44a060863610996db3f6" category="list-text">Necesita un mínimo de un sistema de archivos FSx para ONTAP:</block>
   <block id="ae0e1b2daa525e1e1109bf5c13627d7d" category="list-text">El motor GenAI de NetApp utilizará un sistema de archivos para almacenar la base de datos vectorial utilizada por la base de datos de conocimientos.</block>
   <block id="c076421513a5b28b674cdd0d818b4476" category="paragraph">Este sistema de archivos FSx para ONTAP debe utilizar volúmenes de FlexVol. No se admiten los volúmenes de FlexGroup.</block>
@@ -819,4 +817,19 @@
   <block id="f7fb3b5dc06e03848b8f5ff23bbcd37d" category="paragraph">GenAI vuelve a clasificar los resultados de búsqueda de forma predeterminada para mejorar la relevancia de los resultados. Para obtener los mejores resultados, asegúrate de que la configuración del modelo de base de Amazon Bedrock incluya acceso a un modelo de reclasificación, como Cohere Rerank o Amazon Rerank, si está disponible en tu región.</block>
   <block id="986aee2caba870111e5ce3c5571c82de" category="section-title">02 de febrero de 2025</block>
   <block id="26e6f4cc71039ce95ddbb0acdad6891d" category="section-title">29 de septiembre de 2024</block>
+  <block id="9a7d43c72f0d1a35c2a2cdfb58c6cc0d" category="doc">Compatibilidad con los modelos de base de Amazon Nova</block>
+  <block id="ba0908c46e81d6dfcc41f1af42be123c" category="paragraph">GenAI ahora es compatible con los modelos básicos de Amazon Nova. Amazon Nova Micro, Amazon Nova Lite y Amazon Nova Pro son compatibles.</block>
+  <block id="5ddfb412189af7bcce0a056c9fcef326" category="paragraph"><block ref="5ddfb412189af7bcce0a056c9fcef326" category="inline-link-macro-rx"></block></block>
+  <block id="1b72fbdbed811fb02ab7310c71e79ab2" category="inline-link">La documentación de AWS</block>
+  <block id="c3321626512a416bb22de0f62b8458bc" category="list-text">Debe activar el modelo de chat básico que planea utilizar antes de crear su base de conocimientos. Dado que el soporte de modelos varía según la región de AWS, consulte<block ref="0bd10fd36efa0fd68b9fc8a53401f764" category="inline-link-rx"></block> para verificar qué modelos puede utilizar en las regiones en las que planea implementar su base de conocimientos.</block>
+  <block id="1c61d246c37b3dd7fcf1e2812799ee53" category="paragraph">GenAI admite los siguientes modelos Anthropic Claude y Amazon Nova:</block>
+  <block id="e37cca905470582668e8cf006efd3557" category="list-text">Claude Antropic:</block>
+  <block id="22e20ffc2045bc3420e2cb94c47a29ce" category="list-text">Amazon Nova:</block>
+  <block id="39106736b72a09cf072c2dc73e847b86" category="list-text">Micro Nova</block>
+  <block id="5966dc23b01f7dbdf996a7a860ee9459" category="list-text">Nova Lite (compatible con imágenes y texto)</block>
+  <block id="d5c9ae773ceec77e2ca3ed0d6347bf9b" category="list-text">Nova Pro (compatible con imágenes y texto)</block>
+  <block id="ddbb727fa06553b8b9d4aab207332c7e" category="paragraph">Obtenga más información sobre el uso de estos modelos con Amazon Bedrock:</block>
+  <block id="0dd1c2bf85c6e3f8ac28b8d5d343a230" category="list-text"><block ref="0dd1c2bf85c6e3f8ac28b8d5d343a230" category="inline-link-rx"></block></block>
+  <block id="b6c678dfe5e31c8f081fa11ac56bff46" category="inline-link">Introducción a Amazon Nova en la consola Amazon Bedrock</block>
+  <block id="cafb3db15a71932288c768a7beb404b4" category="list-text"><block ref="cafb3db15a71932288c768a7beb404b4" category="inline-link-rx"></block></block>
 </blocks>
